cib/infra-be/cib-prod-kdc/cib-transfers/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: kdc-cib-transfers
  labels:
    app: cib-transfers
    group: cib-api
    provider: jkube
  annotations:
    haproxy.router.openshift.io/timeout: 120s
spec:
  host: business.iz.com.sa
  path: /cib-transfers
  to:
    kind: Service
    name: kdc-cib-transfers
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIGxDCCBaygAwIBAgIQBKfDiBWPci/gihPv4pD6ajANBgkqhkiG9w0BAQsFADBZ
[...]
      Lh7J8dKtEfY=
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIEvgIBADANBgkqhkiG9w0BAQEFAASCBKgwggSkAgEAAoIBAQDAngls+Fz+Jaxc
[...]
      k7MbFIk1ygi64Ea+ue+5FjkJ
      -----END PRIVATE KEY-----
    caCertificate: |
      -----BEGIN CERTIFICATE-----
      MIIEyDCCA7CgAwIBAgIQDPW9BitWAvR6uFAsI8zwZjANBgkqhkiG9w0BAQsFADBh
[...]
      JCqVJUzKoZHm1Lesh3Sz8W2jmdv51b2EQJ8HmA==
      -----END CERTIFICATE-----
  wildcardPolicy: None
